# new_duck

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
app/: converting.py  extract.py  extract_from_gdrive.py  frontend.py  infer.py  log.py  pipeline.py  schema_class.py  transform.py
docs/: extract.md  index.md  log.md  pipeline.md  transform.md
infered_schema/: schema_inferred.py
log/: files_log.db
